# Calendar-management-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BILLING.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md  LLM_PROVIDERS.md
migrations/: env.py
migrations/versions/: 01c8f25b3d41_add_calendar_events_table.py  335f801d88f8_add_scanned_emails_table.py  3e777f80443c_add_organization_tables.py  a9b8e1f657d6_add_drafts_guides_links_onboarding_.py  aca40b1a2a14_add_email_intelligence_tables.py  acbf06ab3ed5_add_config_settings_table.py  b35a5ddbfb73_initial_tables.py  e2a317726f0c_add_user_scheduling_preferences_columns.py
nginx/: default.conf
src/: __init__.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/agent/router/: __init__.py
src/agent/tools/: __init__.py  calendar_tools.py
src/api/: dependencies.py
src/api/middleware/: rate_limiter.py
src/api/rest/: app.py  email_routes.py  org_routes.py  routes.py  settings_routes.py
src/api/websocket/: __init__.py  chat_ws.py
src/application/: __init__.py
src/application/dto/: __init__.py
src/application/services/: __init__.py  analytics_service.py  auth_service.py  booking_page_service.py  calendar_service.py  chat_service.py  draft_composer_service.py  email_classifier_service.py  email_intelligence_service.py  invite_verification_service.py  message_hook_service.py  onboarding_service.py  organization_service.py  scheduling_link_service.py  user_guides_service.py
src/billing/: __init__.py  plans.py  stripe_service.py  usage_tracker.py
src/config/: container.py  settings.py
src/domain/entities/: __init__.py  calendar_event.py  conversation.py  email_message.py  organization.py  user.py
src/domain/events/: __init__.py
src/domain/exceptions/: __init__.py
src/domain/interfaces/: __init__.py  cache.py  calendar_provider.py  conversation_repository.py  email_provider.py  event_repository.py  llm.py  organization_repository.py  usage_tracker.py  user_repository.py
src/domain/value_objects/: __init__.py
src/infrastructure/: __init__.py
static/: app.js  app.js.bak  index.html  index.html.bak  style.css  style.css.bak
tests/: conftest.py
tests/integration/: test_api.py  test_email_scan_pipeline.py  test_new_endpoints.py
tests/unit/: test_analytics_service.py  test_booking_page_service.py  test_calendar_event.py  test_draft_composer.py  test_email_classifier.py  test_email_intelligence.py  test_intent_router.py  test_llm_factory.py  test_message_hook_service.py  test_onboarding_service.py  test_scheduling_link_service.py  test_user.py  test_user_guides_service.py  test_value_objects.py
(+29 files in other folders)
