[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calendar-agent"
version = "0.1.0"
description = "AI-powered Calendar Management Agent — SaaS Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Calendar Agent Team" }]

dependencies = [
    # --- Agent / LLM (multi-provider) ---
    "langchain>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "langchain-openai>=0.2,<0.3",
    "langchain-anthropic>=0.3,<0.4",
    "anthropic>=0.42,<1.0",
    "langsmith>=0.1,<0.3",
    # --- Web Framework ---
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "websockets>=12.0,<14.0",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    # --- Cache ---
    "redis[hiredis]>=5.0,<6.0",
    # --- Auth ---
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "google-auth>=2.29,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "google-api-python-client>=2.100,<3.0",
    # --- Billing ---
    "stripe>=8.0,<10.0",
    # --- Config & Validation ---
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    # --- HTTP ---
    "httpx>=0.27,<1.0",
    # --- Date/Time ---
    "python-dateutil>=2.9,<3.0",
    "pytz>=2024.1",
    # --- Monitoring ---
    "sentry-sdk[fastapi]>=2.0,<3.0",
    "structlog>=24.0,<25.0",
    # --- Utils ---
    "tenacity>=8.3,<10.0",
    "cryptography>=42.0,<44.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.14,<4.0",
    "httpx>=0.27,<1.0",
    "factory-boy>=3.3,<4.0",
    "faker>=24.0,<26.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires services)",
    "e2e: End-to-end tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["google.*", "googleapiclient.*", "redis.*", "stripe.*"]
ignore_missing_imports = true
